--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,10 @@
     "framer-motion": "^12.17.0",
     "lucide-react": "^0.511.0",
     "motion": "^12.12.1",
-    "next": "15.3.2",
+    "next": "^15.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "tailwind-merge": "^3.3.0"
   },
