--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "swagger-autogen": "node src/docs/swagger.js",
+    "dev": "npm run swagger-autogen && nodemon src/server.js",
+    "dev:docs": "cross-env ENABLE_DOCS=true npm run dev",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,11 @@
     "mongoose": "^8.15.0",
     "multer": "^2.0.0",
     "nodemailer": "^7.0.5",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1"
+  },
+  "devDependencies": {
+    "cross-env": "^10.0.0"
   }
 }
